# MetaHack

./: .gitignore  ActionWait.h  Attributes.txt  CMakeLists.txt  CppCheckResults.xml  Doxyfile  MetaHack Characters.odt  MetaHack.cbp  MetaHack.depend  MetaHack.layout  MetaHack.sln  MetaHack.sublime-project  MetaHack.sublime-workspace  MetaHack.vcxproj  MetaHack.vcxproj.filters  README.md  Random Thoughts.txt  Visitor.h  doxygen_log.txt  dump.json  headerfiles.txt  main.cpp  sourcefiles.txt  test.lua
Installer/: Installer.vdproj
actions/: Action.cpp  Action.h  ActionAttack.cpp  ActionAttack.h  ActionAttire.cpp  ActionCRTP.h  ActionClose.cpp  ActionClose.h  ActionDie.cpp  ActionDie.h  ActionDrop.cpp  ActionDrop.h  ActionEat.cpp  ActionEat.h  ActionFill.cpp  ActionFill.h  ActionGet.cpp  ActionGet.h  ActionHurl.cpp  ActionHurl.h  ActionInscribe.cpp  ActionInscribe.h  ActionLock.cpp  ActionLock.h  ActionMix.cpp  ActionMix.h  ActionMove.cpp  ActionMove.h  ActionOpen.cpp  ActionOpen.h  ActionPutInto.cpp  ActionPutInto.h  ActionQuaff.cpp  ActionQuaff.h  ActionQueue.cpp  ActionQueue.h  ActionRead.cpp  ActionRead.h  ActionResult.h  ActionResult_OLD.h  (+20 more)
cmake_modules/: FindSFGUI.cmake
components/: ComponentActivity.cpp  ComponentActivity.h  ComponentAnimated.cpp  ComponentAnimated.h  ComponentAppearance.cpp  ComponentAppearance.h  ComponentBase.h  ComponentBodyparts.cpp  ComponentBodyparts.h  ComponentCRTP.h  ComponentCombustible.cpp  ComponentCombustible.h  ComponentCorrodible.cpp  ComponentCorrodible.h  ComponentDigestiveSystem.cpp  ComponentDigestiveSystem.h  ComponentEquippable.cpp  ComponentEquippable.h  ComponentGender.cpp  ComponentGender.h  ComponentGlobals.cpp  ComponentGlobals.h  ComponentHealth.cpp  ComponentHealth.h  ComponentInventory.cpp  ComponentInventory.h  ComponentLightSource.cpp  ComponentLightSource.h  ComponentLockable.cpp  ComponentLockable.h  ComponentMagicalBinding.cpp  ComponentMagicalBinding.h  ComponentManager.cpp  ComponentManager.h  ComponentMap.h  ComponentMaterialFlags.cpp  ComponentMaterialFlags.h  ComponentMatterState.cpp  ComponentMatterState.h  ComponentMobility.cpp  (+17 more)
config/: Bible.cpp  Bible.h  Paths.cpp  Paths.h  Settings.cpp  Settings.h  Strings.cpp  Strings.h
design_patterns/: AssertHelper.cpp  AssertHelper.h  Event.cpp  Event.h  Object.cpp  Object.h  ObjectRegistry.cpp  ObjectRegistry.h  Observer.cpp  Observer.h  Printable.cpp  Printable.h  Serializable.cpp  Serializable.h  Service.h  Subject.cpp  Subject.h
doxygen/: doxyfile
entity/: Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EntityId.cpp  EntityId.h  EntityNullView.cpp  EntityNullView.h  EntityPool.cpp  EntityPool.h  EntityStandard2DView.cpp  EntityStandard2DView.h  EntityView.cpp  EntityView.h
events/: UIEvents.h
game/: App.cpp  App.h  AppState.cpp  AppState.h  AppStateGameMode.cpp  AppStateGameMode.h  AppStateMainMenu.cpp  AppStateMainMenu.h  AppStateSplashScreen.cpp  AppStateSplashScreen.h  AppVC.cpp  AppVC.h  GameState.cpp  GameState.h
game_windows/: MessageLogView.cpp  MessageLogView.h  StatusArea.cpp  StatusArea.h
gui/: GUICloseHandle.cpp  GUICloseHandle.h  GUICollapseHandle.cpp  GUICollapseHandle.h  GUIDesktop.cpp  GUIDesktop.h  GUIEvent.h  GUILabel.cpp  GUILabel.h  GUIObject.cpp  GUIObject.h  GUIResizeHandle.cpp  GUIResizeHandle.h  GUIShrinkHandle.cpp  GUIShrinkHandle.h  GUITitleBar.cpp  GUITitleBar.h  GUIWindow.cpp  GUIWindow.h
include/: Action.h  ActionAttack.h  ActionAttire.h  ActionCRTP.h  ActionClose.h  ActionDie.h  ActionDrop.h  ActionEat.h  ActionFill.h  ActionGet.h  ActionHurl.h  ActionInscribe.h  ActionLock.h  ActionMix.h  ActionMove.h  ActionOpen.h  ActionPutInto.h  ActionQuaff.h  ActionRead.h  ActionResult.h  ActionShoot.h  ActionTakeOut.h  ActionTurn.h  ActionType.h  ActionUnlock.h  ActionUnwield.h  ActionUse.h  ActionWait.h  ActionWield.h  Aggregate.h  App.h  AppState.h  AppStateGameMode.h  AppStateMainMenu.h  AppStateSplashScreen.h  Assert.h  AssertHelper.h  Attribute.h  AttributeSet.h  Beatitude.h  (+122 more)
inventory/: Inventory.cpp  Inventory.h  InventoryArea.cpp  InventoryArea.h  InventorySelection.cpp  InventorySelection.h  InventorySlot.cpp  InventorySlot.h
keybuffer/: IKeyBuffer.cpp  IKeyBuffer.h  KeyBuffer.cpp  KeyBuffer.h  NullKeyBuffer.h
lib/: libboost_chrono-vc140-mt-1_59.lib  libboost_chrono-vc140-mt-1_60.lib  libboost_chrono-vc140-mt-gd-1_59.lib  libboost_chrono-vc140-mt-gd-1_60.lib  libboost_date_time-vc140-mt-1_59.lib  libboost_date_time-vc140-mt-1_60.lib  libboost_date_time-vc140-mt-gd-1_59.lib  libboost_date_time-vc140-mt-gd-1_60.lib  libboost_filesystem-vc140-mt-1_59.lib  libboost_filesystem-vc140-mt-1_60.lib  libboost_random-vc140-mt-1_59.lib  libboost_random-vc140-mt-1_60.lib  libboost_random-vc140-mt-gd-1_59.lib  libboost_random-vc140-mt-gd-1_60.lib  libboost_system-vc140-mt-1_59.lib  libboost_system-vc140-mt-1_60.lib  libboost_system-vc140-mt-gd-1_59.lib  libboost_system-vc140-mt-gd-1_60.lib  libboost_thread-vc140-mt-1_59.lib  libboost_thread-vc140-mt-1_60.lib  libboost_thread-vc140-mt-gd-1_59.lib  libboost_thread-vc140-mt-gd-1_60.lib  lua51-d.lib  lua51.lib  sfgui-d.lib  sfgui.lib  sfml-audio-d.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network.lib  sfml-system-d.lib  sfml-system.lib  sfml-window-d.lib  sfml-window.lib
lua/: LuaEntityFunctions.cpp  LuaEntityFunctions.h  LuaFunctions-Entity.h  LuaFunctions-Global.h  LuaObject.cpp  LuaObject.h  LuaTemplates.h
map/: Map.cpp  Map.h  MapCorridor.cpp  MapCorridor.h  MapCrossCorridor.cpp  MapDiamond.cpp  MapDiamond.h  MapDonutRoom.cpp  MapDonutRoom.h  MapFactory.cpp  MapFactory.h  MapFeature.cpp  MapFeature.h  MapGenerator.cpp  MapGenerator.h  MapId.cpp  MapId.h  MapLRoom.cpp  MapLRoom.h  MapMemory.cpp  MapMemory.h  MapNullView.cpp  MapNullView.h  MapRoom.cpp  MapRoom.h  MapStandard2DView.cpp  MapStandard2DView.h  MapView.cpp  MapView.h
maptile/: MapTile.cpp  MapTile.h  MapTileNullView.cpp  MapTileNullView.h  MapTileStandard2DView.cpp  MapTileStandard2DView.h  MapTileView.h
metadata/: Metadata.cpp  (+3 more)
(+716 files in other folders)
